# LaneDetection

./: .gitignore  CMakeLists.txt  create_assembly.txt  idea.cpp  readme.md
aufgabe01_fahrspurerkennung/: 01_sobel.ipynb  02_hough.ipynb
aufgabe01_fahrspurerkennung/.ipynb_checkpoints/: 01_sobel-checkpoint.ipynb  02_hough-checkpoint.ipynb
eval/: createParamFiles.py  directoryStructure.py  evaluate.py  evaluateRoad.py  helper.py  parameters.par  print.py
eval/eval_param/: param_0.par  param_1  param_1.par  param_10  param_10.par  param_100  param_100.par  param_1000.par  param_1001.par  param_1002  param_1002.par  param_1003  param_1003.par  param_1004  param_1004.par  param_1005.par  param_1006.par  param_1007.par  param_1008.par  param_1009  param_1009.par  param_101.par  param_1010  param_1010.par  param_1011.par  param_1012.par  param_1013.par  param_1014.par  param_1015.par  param_1016  param_1016.par  param_1017.par  param_1018.par  param_1019.par  param_102  param_102.par  param_1020  param_1020.par  param_1021.par  param_1022.par  (+4511 more)
eval/eval_results/: data0  data10  data100  data1000  data1001  data1002  data1003  data1004  data1005  data1006  data1007  data1008  data1009  data101  data1010  data1011  data1012  data1013  data1014  data1015  data1016  data1017  data1018  data1019  data102  data1020  data1021  data1022  data1023  data1024  data1025  data1026  data1027  data1028  data1029  data103  data1030  data1031  data1032  data1033  (+6822 more)
inc/: algos.hpp  calibration.hpp  codes.hpp  filters.hpp  fitting.hpp  helper.hpp
python_umgebung_aufgabe01/: pip-selfcheck.json
python_umgebung_aufgabe01/share/jupyter/nbextensions/jupyter-js-widgets/: extension.js
report/: best20algo1.txt  best20algo2.txt  best20algo3.txt  best20algo4.txt  best20algo5.txt  worst20algo1.txt  worst20algo2.txt  worst20algo3.txt  worst20algo4.txt  worst20algo5.txt
report/profiling/: algos  filter  readme.md
src/: algos.cpp  calibration.cpp  filters.cpp  fitting.cpp  helper.cpp  main.cpp  random.cpp  row.cpp
test/: evaluateRoad.py  helper.py
